# commander-deckbuilder

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  ROADMAP.md  banlist.yaml  featured_commanders.yaml  quotas.yaml  rules.yaml  staples.yaml
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: __init__.py  errors.py  main.py  schemas.py  service.py  state.py
backend/pipeline/: __init__.py  build.py  card_images.py  edhrec.py  model.py  prints.py  scryfall.py
backend/quotas/: __init__.py  color_sources.py  config.py  lands.py  resolver.py  validator.py
backend/rules/: __init__.py  banlist.py  featured.py  resolve.py
backend/selector/: __init__.py  audit.py  constraints.py  cp_sat.py  deck_rules.py  export.py  greedy.py  provisional_tags.py  staples.py  swap.py
backend/tags/: audit.py  model.py  store.py
backend/tests/: conftest.py  test_app.py  test_audit.py  test_banlist.py  test_banlist_api.py  test_build.py  test_cards_api.py  test_color_sources.py  test_commanders_api.py  test_constraints.py  test_constraints_contract.py  test_cpsat.py  test_deck_api.py  test_deck_rules.py  test_edhrec.py  test_export.py  test_export_api.py  test_export_pdf_api.py  test_export_pdf_tokens.py  test_featured.py  test_greedy.py  test_lands.py  test_maybeboard_api.py  test_model.py  test_perf_swap.py  test_perf_swap_api.py  test_pips.py  test_prints.py  test_quotas_config.py  test_resolve.py  test_resolver.py  test_sequential_start_api.py  test_staples.py  test_state.py  test_structure_api.py  test_swap.py  test_swap_api.py  test_tag_model.py  test_tags_store.py  test_validator.py
backend/tests/fixtures/: edhrec_sample.json
data/: edhrec_ranking.json
data/processed/: cards.jsonl
data/tags/: audit_queue.jsonl  llm_tags.jsonl  model.json  model_tags.jsonl  review_queue.jsonl
docs/: CUOTAS_PROPUESTA.md  ORQUESTADOR.md
experiments/selection/: AUDITORIA_SELECTORES.md  COMPARATIVA_EDHREC_B4.md  audit_selectors.py  compare_edhrec.py  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: gen_commander_descriptions.py  precache_edhrec.py  precache_edhrec_ranking.py
(+134 files in other folders)
