[project]
name = "commander-deckbuilder-backend"
version = "0.1.0"
description = "Backend and data pipeline for Commander Deckbuilder"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic>=2",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "ortools",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "app", "quotas", "rules", "selector", "tags"]

[tool.pytest.ini_options]
markers = [
    "perf: latency budget check (median-of-N timing, see tests/test_perf_swap.py)",
]
