[project]
name = "commander-deckbuilder-backend"
version = "0.1.0"
description = "Backend and data pipeline for Commander Deckbuilder"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic>=2",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "ortools",
    "fpdf2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    # Tagging-engine experiments only (experiments/tagging). NOT installed in the
    # HF image (the Dockerfile runs `pip install -e ./backend` with no extras),
    # so the runtime stays provider/ML-dependency free; a trained model ships as
    # exported numpy/onnx weights, never as a sklearn import.
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "app", "quotas", "rules", "selector", "tags"]

[tool.pytest.ini_options]
markers = [
    "perf: latency budget check (median-of-N timing, see tests/test_perf_swap.py)",
]
